base/raspberry-pi-client/workloads/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${RPI_CLIENT_NAMESPACE:=raspberry-pi-client}
