base/raspberry-pi-client/workloads/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raspberry-pi-client
  namespace: ${RPI_CLIENT_NAMESPACE:=raspberry-pi-client}
spec:
  selector:
    matchLabels:
      app: raspberry-pi-client
  replicas: 1
  template:
    metadata:
      labels:
        app: raspberry-pi-client
    spec:
      containers:
        - name: raspberry-pi-client
          image: ghcr.io/rustygreen/raspberry-pi-client:main
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
