base/raspberry-pi-client/workloads/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: raspberry-pi-client
  namespace: ${RPI_CLIENT_NAMESPACE:=raspberry-pi-client}
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app:  raspberry-pi-client
