base/raspberry-pi-client/workloads/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raspberry-pi-client
  namespace: ${RPI_CLIENT_NAMESPACE:=raspberry-pi-client}
  annotations:
    hajimari.io/enable: "false"
    hajimari.io/icon: "raspberry-pi"
spec:
  rules:
    - host: pi.${PRIMARY_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: raspberry-pi-client
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pi.${PRIMARY_DOMAIN}
